--- a/src/style.css
+++ b/src/style.css
@@ -7,17 +7,54 @@ body {
 	font-family: 'Poppins', sans-serif;
 }
 
-#bigText {
-	font-family: Georgia, Times, serif;
+#text {
+	display: flex;
+	padding: 6em 8em;
 }
 
+#bigText {
+	font-family: Georgia, Times, serif;
+	width: 50%;
+	margin-right: 5em;
+}
+
+#paragraph {
+	width: 50%;
+}
+
+#images {
+	display: flex;
+	flex-flow: row wrap;
+	margin-left: 8em;
+}
+
+.imageFull {
+	width: 30em;
+	height: auto;
+	margin: 0 6em 0 0;
+}
+
+.imageFull:nth-of-type(3n + 2) {
+	margin: 6em 6em 0 0;
+}
+
+.imageFull img {
+	width: 100%;
+}
 
 .job {
 	font-family: serif;
-	font-size: 11px;
-
+	font-size: 12px;
+	position: relative;
+	top: -59em;
+	left: 41em;
+	writing-mode: vertical-lr;
+	text-orientation: mixed;
 }
 
+.right {
+	top: -61em;
+}
 
 footer, footer a {
 	text-align: center;
@@ -26,13 +63,20 @@ footer, footer a {
 }
 
 @media (max-width: 375px) {
-	#text {
+		#text {
+			display: block;
+		padding: 0;
 		font-size: 18px;
 		margin: 5em 1em 2em 1em;
 	}
 
+	#bigText{
+		width: 100%;
+	}
+
 	#paragraph {
 		margin-top: 1em;
+		width: 100%;
 	}
 
 	#paragraph h2 {
@@ -43,35 +87,40 @@ footer, footer a {
 		margin-bottom: 4em;
 	}
 
-	main {
-		margin: 0 1em;
-	}
-
 	#images {
 		max-width: 100%;
 		font-size: 14px;
 		display: flex;
 		flex-flow: row wrap;
+		margin-left: 1em;
 	}
 
 	.imageFull {
-		height: 25vh;
+		height: 10vh;
+		width: 11em;
 	}
 
 	.imageFull img{
-		width: 10em;
+		width: 90%;
 	}
 
 	.imageFull:nth-of-type(2n) {
-		margin: 3em 2.2em;
+		position: relative;
+		left: 13em;
+		top: -8em;
+		margin-top: 6em;
 	}
 
+	.imageFull:nth-of-type(5){
+		margin-top: 0em;
+	}
 	.job {
-	position: relative;
-	top: -20.5em;
-	left: 13em;
-	writing-mode: vertical-lr;
-	text-orientation: mixed;
+		position: relative;
+		top: -20.5em;
+		left: 13em;
+		font-size: 11px;
+		writing-mode: vertical-lr;
+		text-orientation: mixed;
 	}
 
 	.right {
